package com.exercises.parking.api;

/**
 *  Car types used to define the type of parking slots.
 *
 *  @author mghita
 *
 */
public enum CarType {

  SEDAN,
  ELECTRIC_20KW,
  ELECTRIC_50KW

}
